test/parsing/errors/sparse-subdomain-twoargs.good
sparse-subdomain-twoargs.chpl:2: error: the 'sparse subdomain' expression expects exactly one argument (the parent domain)
